--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.20.1
   cloud_firestore: ^3.4.4
+  provider: ^6.0.3
+
 
 dev_dependencies:
   flutter_test:
